Update CSS to align left, JS file corrections

--- a/style.css
+++ b/style.css
@@ -5,11 +5,17 @@ body {
 
 div {
   border: 3px solid red;
-  padding: 10px;
+  padding: 1px;
   border-radius: 8px;
   background-color: lightgreen;
+  text-align: left;
 }
 
 p {
   font-weight: bold;
+}
+
+img {
+  width: 10%;
+  height: auto;
 }
